# verify-once-learn-twice

./: .gitignore  LICENSE  README.md  THREAD.md  pyproject.toml
examples/: min_loop.py  paper_loop.md  ttrl_tinker.md  verifiers_integration.md
research/: README.md
research/data/: ablation_vbc_smoke.json  ablation_vbc_smoke5.json  tasks_min.jsonl
research/scripts/: analyze_judge_noise.py  audit_terminal_evaluation.py  build_ablation_status.py  build_live_status.py  build_publish_bundle.sh  build_publish_readiness.py  build_repro_manifest.py  build_win_snapshot.py  costly_leaderboard.py  domain_slice_matrix.py  drive_publish_autopilot.sh  endgame_publish_pipeline.sh  feedback_curve.py  kernel_cost_compare.py  kernel_transfer_report.py  kernelllm_metric_card.py  list_models.py  make_costly_env_datasets.py  make_expensive_feedback_subset.py  make_fail_first_subset.py  make_fail_majority_subset.py  make_humaneval_domain_subsets.py  make_synth_stringops.py  mine_adaptive_hardset.py  paired_compare.py  phase20_orchestrate.py  phase22_pipeline.sh  phase23_pipeline.sh  phase24_pipeline.sh  phase25_probe_fix.sh  phase25_scale_pipeline.sh  phase26_noise_pipeline.sh  phase27_summarize.py  phase28_budget1_ext_pipeline.sh  phase28_budget1_pipeline.sh  phase28_combine.sh  phase28_quick_s0_pipeline.sh  phase30_mbpp_budget1_post.sh  phase30_waiter.sh  phase30b_mbpp_budget1_pipeline.sh  (+44 more)
research/tests/: test_feedback_normalize.py  test_oracle_judge_noise.py  test_publish_readiness_gate.py  test_teacher_rerank.py  (+1 more)
volt/: __init__.py  verifier_budget_policy.py
(+20 files in other folders)
