[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volt-vbc"
version = "0.1.0"
description = "Verifier Budget Controller for costly-feedback RL loops"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ryan Mathieu" }]

[tool.setuptools]
packages = ["volt"]

